# zyn_ext_gui

./: .gitlab-ci.yml  CMakeLists.txt  README.md  manifest.ttl.in  private_ui.h  release.sh  zyn_ext_gui.c
cmake/: arm-linux-gnueabihf.cmake  armv7h-linux.cmake  i686-linux-gnu.cmake  i686-linux.cmake  i686-w64-mingw32.cmake  universal-apple-darwin.cmake  x86_64-linux-gnu.cmake  x86_64-linux.cmake  x86_64-w64-mingw32.cmake
